<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center"
	android:theme="@android:style/Theme.Holo">

	<Button
	    android:id="@+id/new_game"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/new_game" />

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/empty_space"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_width="wrap_content"
		android:visibility="invisible"/>

	<Button
	    android:id="@+id/load_game"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/load_game" />

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/empty_space"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_width="wrap_content"
		android:visibility="invisible"/>

	<Button
	    android:id="@+id/exit_game"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/exit_game" />

</LinearLayout>

