<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player 1:"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Life Points"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/maingameProgressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/lose" 
            android:layout_weight="1.0"
            android:textColor="@color/Red" />

        <EditText
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:inputType="numberDecimal"
            android:minEms="6"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="3" />

        <Button
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/gain"
            android:layout_weight="1.0"
            android:textColor="@color/Green" />
    </LinearLayout>

    <LinearLayout
        style="android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/lose_100"
            android:textColor="@color/Red" />

        <Button
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/reset" />

        <Button
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/gain_100"
            android:textColor="@color/Green" />
    </LinearLayout>

    <LinearLayout
        style="android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/lose_500"
            android:textColor="@color/Red" />

        <Button
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/half" />

        <Button
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/gain_500"
            android:textColor="@color/Green" />
    </LinearLayout>

    <LinearLayout
        style="android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/lose_1000"
            android:textColor="@color/Red" />

        <Button
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/dobra" />

        <Button
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/gain_1000"
            android:textColor="@color/Green" />
    </LinearLayout>

</LinearLayout>